[package]
name = "valet_parking"
version = "0.1.0"
authors = ["Paul Dicker <pitdicker@gmail.com>"]
edition = "2018"

description = "Croos platform thread parking"
readme = "README.md"
documentation = "https://docs.rs/valet_parking"

repository = "https://github.com/pitdicker/valet_parking"
keywords = ["thread", "park", "futex"]
categories = ["Concurrency", "no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [".travis.yml"]

[features]
fallback = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "ntstatus", "minwindef",
    "winerror", "winbase", "errhandlingapi", "handleapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.55"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"
